--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/login.css">
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -28,14 +29,14 @@
         
         <form action="/login" method="POST" class="auth-form">
           <div class="form-group">
+            <input type="email" id="email" name="email" placeholder=" " required>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
           </div>
           
           <div class="form-group">
-            <label for="password">Password</label>
             <div class="password-input">
-              <input type="password" id="password" name="password" required>
+              <input type="password" id="password" name="password" placeholder=" " required>
+              <label for="password">Password</label>
               <button type="button" class="toggle-password" data-target="password">
                 <i data-lucide="eye" class="show-password"></i>
                 <i data-lucide="eye-off" class="hide-password" style="display: none;"></i>
