--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -14,6 +14,17 @@
     <% }); %>
   <% } %>
   <script src="https://unpkg.com/lucide@latest"></script>
+  
+  <!-- Google Analytics -->
+  <% if (process.env.GA_MEASUREMENT_ID) { %>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.GA_MEASUREMENT_ID %>"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '<%= process.env.GA_MEASUREMENT_ID %>');
+  </script>
+  <% } %>
 </head>
 <body>
   <%- include('./nav') %>
